@@ -1,3 +1,9 @@
+2013-02-17  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvinfo, mkvpropedit, mmg's header editor: bug fix: Fixed the
+        description for the DisplayUnit element to include value 3
+        ("aspect ratio").
+
 2013-02-16  Moritz Bunkus  <moritz@bunkus.org>
 
         * documentation: Added a Dutch translation of mmg's guide by
